--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "mongoose": "^7.2.0"
+    "mongoose": "^7.2.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "body-parser": "^1.20.2",
